syntax = "proto3";

package service;

message Status {
    //code = 1 means success
    int32 code = 1;
    string error = 2;
}

message MessageResponse {
    Status status = 1;
}

enum StoreType {
    BTreeDisk = 0;
    BPlusTreeDisk = 1;
}

message ConnectionRequest {
    StoreType type = 1;
}

message CloseConnectionRequest {
}

message GetKVRequest {
    string key = 1;
}

message GetKVResponse {
    Status status = 1;
    string value = 2;
}

message SetKVRequest {
    string key = 1;
    string value = 2;
}

message RemoveKVRequest {
    string key = 1;
}

message RemoveKVResponse {
    Status status = 1;
    bool check = 2;
}

message ExistKVRequest {
    string key = 1;
}

message ExistKVResponse {
    Status status = 1;
    bool check = 2;
}

service KeyValueStoreService {
    // connect ZP_KV service
    rpc ConnectZPKV(ConnectionRequest) returns (MessageResponse){}

    // close connection ZP_KV serivce
    rpc CloseConnectionZPKV(CloseConnectionRequest) returns (MessageResponse){}

    // get key-value connection db
    rpc GetKV(GetKVRequest) returns (GetKVResponse){}

    // set key-value connection db
    rpc SetKV(SetKVRequest) returns (MessageResponse){}

    // remove key-value connection db
    rpc RemoveKV(RemoveKVRequest) returns (RemoveKVResponse){}

    // check key-value exists connection db
    rpc ExistKV(ExistKVRequest) returns (ExistKVResponse){}
}
  